# cthulhu

./: .gitignore  Cargo.toml  JRL_GUIDE.md  README.md  alert.rules  main.rs  rule-wiki.md  rules  setup.sh
src/: alert.rs  alert_handler.py  cli.py  config.rs  engine.py  evaluator.rs  event.rs  ingest_events.py  main.rs  processor.rs  rule_handler.py  rules.rs
src/scripts/: auditd_install.sh
