[package]
name = "cthulhu"
version = "0.1.2"
edition = "2021"
authors = ["JT Steinbach <jacob@jts.gg>"]
description = "A lightweight SIEM agent that tails auditd & journald and fires alerts"
license = "Apache-2.0"

[dependencies]
# Time handling, with serde support
chrono = { version = "0.4", features = ["serde"] }

# CIDR parsing & checking
ipnetwork = "0.20"

# Audit log parser
linux-audit-parser = "0.5"

# Random ID generation
rand = "0.8"

# Regular expressions
regex = "1.7"

# JSON (de)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SHA‑256 hashing
sha2 = "0.10"

# Structured logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
